<resources>
    <string name="app_name">EuriskoApplicationChallenge</string>
    <string name="signuptxt"> No account yet?</string>
    <string name="signuplink"><u>Signup here!</u></string>
    <string name="alreadytxt">Already have an account?</string>
    <string name="alreadylink"><u>Login here!</u></string>
    <string name="profile_icon">Profile Icon</string>
    <string name="enter_first_name">Enter First Name:</string>
    <string name="enter_last_name">Enter Last Name:</string>
    <string name="enter_your_e_mail">Enter your E-mail:</string>
    <string name="enter_password">Enter Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="pass">Password:</string>
    <string name="passwordconf">Confirm Password</string>
    <string name="sign_up">Sign-Up</string>
    <string name="title_activity_home">Home_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="e_mail_address">E-mail Address:</string>
    <string name="enter_your_email_here">Enter your Email Here</string>
    <string name="enter_your_password_here">Enter your Password Here</string>
    <string name="login">Login</string>
    <string name="eurisko_mobility">Eurisko Mobility</string>
    <string name="eurisko_mobility_icon">Eurisko Mobility Icon</string>
    <string name="welcome_to_the_home_page">Welcome to the Home Page</string>
    <string name="news">News</string>
    <string name="more">More</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="your_first_name">Your First Name:</string>
    <string name="your_last_name">Your Last Name:</string>
    <string name="your_email">Your Email:</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="change_first_name">Change First Name</string>
    <string name="change_last_name">Change Last Name</string>
    <string name="enter_file_name">Enter File Name</string>
    <string name="upload">Upload</string>
    <string name="choose_file">Choose File</string>
    <string name="take_image">Take Image</string>
    <string name="choose_image">Choose Image</string>

</resources>
