<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/iv_pp"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/profile_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/profile_icon" />

    <TextView
        android:id="@+id/tv_su_fn"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_pp"
        android:layout_marginStart="35dp"
        android:text="@string/enter_first_name"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/TextSize"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_su_ln"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_su_fn"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:text="@string/enter_last_name"
        android:textSize="@dimen/TextSize"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_su_email"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_su_ln"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:text="@string/enter_your_e_mail"
        android:textSize="@dimen/TextSize"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_su_pass"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_su_email"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:text="@string/enter_password"
        android:textSize="@dimen/TextSize"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tv_su_conf_pass"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_su_pass"
        android:layout_marginStart="35dp"
        android:layout_marginTop="25dp"
        android:text="@string/confirm_password"
        android:textSize="@dimen/TextSize"
        tools:ignore="SpUsage" />


    <EditText
        android:id="@+id/et_su_fn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_pp"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@id/tv_su_fn"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="@dimen/TextSize"
        tools:ignore="Autofill,SpUsage,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/et_su_ln"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_su_fn"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/tv_su_ln"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:textSize="@dimen/TextSize"
        tools:ignore="Autofill,SpUsage,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/et_su_email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_su_ln"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/tv_su_ln"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/TextSize"
        tools:ignore="Autofill,SpUsage,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/et_su_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_su_email"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/tv_su_pass"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="@dimen/TextSize"
        tools:ignore="Autofill,SpUsage,TouchTargetSizeCheck,TextContrastCheck" />

    <EditText
        android:id="@+id/et_su_conf_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_su_password"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/tv_su_pass"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textSize="@dimen/TextSize"
        tools:ignore="Autofill,SpUsage,TouchTargetSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_su_conf_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="@dimen/TextSize"
        app:cornerRadius="10dp"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_signup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp">
        <TextView
            android:id="@+id/txt_already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alreadytxt" />

        <TextView
            android:id="@+id/link_already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/alreadylink"
            android:focusable="true"
            android:layout_marginStart="10dp"/>

    </LinearLayout>

</RelativeLayout>