<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".more.ProfileActivity"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/profile_imageview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="25dp"
        />

    <TextView
        android:id="@+id/profile_firstname"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_imageview"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/TextSize"
        android:text="@string/your_first_name"/>

    <TextView
        android:id="@+id/profile_lastname"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_firstname"
        android:layout_marginTop="50dp"
        android:layout_marginStart="35dp"
        android:textSize="@dimen/TextSize"
        android:text="@string/your_last_name"/>

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_lastname"
        android:layout_marginTop="50dp"
        android:layout_marginStart="35dp"
        android:textSize="@dimen/TextSize"
        android:text="@string/your_email"/>

    <EditText
        android:id="@+id/profile_change_firstname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_imageview"
        android:layout_marginStart="25dp"
        android:layout_toEndOf="@id/profile_firstname"
        android:hint="@string/change_first_name" />

    <EditText
        android:id="@+id/profile_change_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/profile_lastname"
        android:layout_below="@id/profile_change_firstname"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:hint="@string/change_last_name"/>

    <TextView
        android:id="@+id/profile_change_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/profile_email"
        android:layout_below="@id/profile_change_lastname"
        android:layout_marginStart="25dp"
        android:layout_marginTop="35dp"
        android:hint="@string/your_email"/>

    <Button
        android:id="@+id/btn_profile_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_email"
        android:layout_marginTop="100dp"
        android:layout_marginStart="75dp"
        android:text="@string/back"/>

    <Button
        android:id="@+id/btn_profile_save"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_email"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="75dp"
        android:text="@string/save" />

    <Button
        android:id="@+id/btn_profile_choose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/choose_image" />


</RelativeLayout>