<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MoreActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profileIV"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/profile_icon"
        android:padding="5dp"
        app:shapeAppearanceOverlay="@style/roundedIV"
        app:strokeColor="@color/black"
        app:strokeWidth="5dp" />


    <Button
        android:id="@+id/btn_profile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileIV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@android:color/transparent"
        android:text="@string/edit_profile"
        android:textColor="@color/black"
        android:textSize="@dimen/TextSize"
        />
    <Button
        android:id="@+id/btn_password"
        android:background="@android:color/transparent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_profile"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/change_password"
        android:textColor="@color/black"
        android:textSize="@dimen/TextSize"/>
    <Button
        android:id="@+id/btn_aboutus"
        android:background="@android:color/transparent"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_password"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:text="@string/about_us"
        android:textColor="@color/black"
        android:textSize="@dimen/TextSize"/>

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_aboutus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@color/red"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="@dimen/TextSize" />


</RelativeLayout>